--- a/space/templates/motd.html
+++ b/space/templates/motd.html
@@ -31,7 +31,7 @@
       <a class="page-link" {% if has_previous %} href="{% url 'motd' page.previous_page_number %}" {% endif %}>Previous</a>
     </li>
 
-      {% if page_number > 6 %}  <!-- if too much space until the start -->
+      {% if page_number > 6 %}  <!-- if too much pages from the start -->
         <li class="page-item"><a class="page-link" href="{% url 'motd' 1 %}">{{1}}</a></li>  <!-- page 1 -->
         <li class="page-item disabled"><a class="page-link">...</a></li>
         {% for i in short_page_range_before %}
@@ -44,8 +44,7 @@
       {% endif %}
 
       <li class="page-item disabled"><a class="page-link"> <strong> {{page_number}} </strong> </a></li>  <!-- current page -->
-
-      {% if page_number < num_pages %}   <!-- if too much space until the end -->
+      {% if page_number < last_page_need_shortened %}   <!-- if too much pages until the end -->
         {% for i in short_page_range_after %}
           <li class="page-item"><a class="page-link" href="{% url 'motd' i %}"> {{i}}</a></li>
         {% endfor %}
