--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -81,12 +81,6 @@
                         Wiki
                     </a>
                 </li>
-                <li class="nav-item {% active_if_contains "/space/pamela" %}">
-                    <a class="nav-link" href="{% url "pamela_list" %}">
-                        <i class="fa fa-users"></i>
-                        Pamela
-                    </a>
-                </li>
                 <li class="nav-item {% active_if_contains "/motd/" %}">
                     <a class="nav-link" href="{% url "motd" "1" %}">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-music-note" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -108,7 +102,7 @@
                 <li class="nav-item {% active_if_contains "/streams/" %}">
                     <a class="nav-link" href="{% url "stream-main" %}">
                         <i class="fas fa-broadcast-tower"></i>
-                        Direct
+                        Conférences
                     </a>
                 </li>
             </ul>
@@ -121,7 +115,7 @@
                             <path fill-rule="evenodd"
                                 d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                         </svg>
-                        {{request.user.username}} 
+                        {{request.user.username}}
                     </a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="{% url "change_balance" %}">€ Ardoise</a></li>
