--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -105,8 +105,8 @@
                         Badges
                     </a>
                 </li>
-                <li class="nav-item {% active_if_contains "/streams/" %}">
-                    <a class="nav-link" href="{% url "stream-main" %}">
+                <li class="nav-item {% active_if_contains "/events/talks/" %}">
+                    <a class="nav-link" href="{% url 'talks' %}">
                         <i class="fas fa-broadcast-tower"></i>
                         Direct
                     </a>
