--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -50,8 +50,8 @@
         </h4>
         <h4>Chat
             <small>
-                <a target="_blank" href="http://webchat.freenode.net/?channels=urlab">
-                    chat.freenode.org#urlab
+                <a target="_blank" href="https://guest.irc.urlab.be/">
+                    chat.libera.chat#urlab
                 </a>
             </small>
         </h4>
