[Add] link to discord in social icons

--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -41,6 +41,12 @@
             <i class="fa fa-calendar fa-stack-1x"></i>
         </span>
         </a>
+        <a href="https://discord.gg/CNbfeXm2HN" title="Discord" target="_blank">
+            <span class="wow fa-stack fa-lg">
+                <i class="fa fa-square-o fa-stack-2x"></i>
+                <i class="fab fa-discord fa-stack-1x"></i>
+            </span>
+        </a>
         <h3>Contact</h3>
         <h4>Mail
             <small>
