--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -238,6 +238,14 @@ Profil de {{user.username}}
             <div class="panel panel-default">
                 <div class="panel-body">
                     <p>
+                        <h4>Token Discord</h4>
+                    </p>
+                </div>
+            </div>
+
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <p>
                         <h4>BADGE{{ user.badgewear_set.all|length|pluralize:"S" }}</h4>
                         <table class="table table-condensed container-fluid">
                             {% if user.badgewear_set.all|length != 0 %}
