--- a/badges/templates/badges_home.html
+++ b/badges/templates/badges_home.html
@@ -40,7 +40,7 @@
                             <img src="{{ badge.icon.url }}" alt="Icon {{ badge.name }}" style="width: 30px; margin-right: 10px;" class="img-circle">
                         {% endif %}
 
-                        <a href="/badges/{{ badge.pk }}">
+                        <a href="{% url "badge_view" badge.pk %}">
                             {{ badge.name }}
                         </a>
                     </td>
@@ -91,7 +91,7 @@
                                 <img src="{{ badge.icon.url }}" alt="Icon {{ badge.name }}" style="width: 30px; margin-right: 10px;" class="img-circle">
                             {% endif %}
 
-                            <a href="/badges/{{ badge.pk }}">
+                            <a href="{% url "badge_review" badge.pk %}">
                                 {{ badge.name }}
                             </a>
                         </td>
