[Add] badge proposition button

--- a/badges/templates/badges_home.html
+++ b/badges/templates/badges_home.html
@@ -106,6 +106,12 @@
             </tbody>
         </table>
     {% endif %}
+    
+    <div class="d-flex justify-content-end">
+        <a href="{% url "badge_proposal" %}" class="btn btn-success">
+            <i class="fas fa-plus"></i> Proposer un badge
+        </a>
+    </div>
 </div>
 
 {% endblock %}
