[Add] missing articles

--- a/incubator/templates/new.html
+++ b/incubator/templates/new.html
@@ -140,6 +140,11 @@
     <div class="mb-5">
         <h2 id="projets">Les projets</h2>
         <h3 class="ml-3" id="projets_add">Se rajouter à un projet</h3>
+        <p class="ml-5">
+            N'importe qui peut participer à n'importe quel projet. Si tu désires t'impliquer dans un projet, il
+            te suffit de contacter la personne qui maintient le projet et cette dernière se fera un plaisir de
+            t'aider à participer au projet.
+        </p>
 
         <h3 class="ml-3" id="projets_propose">Proposer un projet</h3>
         <p class="ml-5">
@@ -163,6 +168,12 @@
 
     <div class="mb-5">
         <h2>Matériel à disposition</h2>
+        <p class="ml-5">
+            Beaucoup de matériel éléctronique et informatique est à la disposition de tous au hackerspace. Si tu désires emprunter
+            du matériel pour le faire sortir du hackerspace, tu dois impérativement noter ton emprunt dans le <a href="{% url "wiki_home" %}">wiki</a>
+            du hackerspace.
+            <br/>
+            Si tu possède du matériel chez toi et que tu n'en a pas l'utilité, amène le au hackerspace, il peut toujours servir !
+        </p>
     </div>
-
 {% endblock %}
