--- a/incubator/templates/new.html
+++ b/incubator/templates/new.html
@@ -38,7 +38,7 @@
     <div class="mb-5">
         <h2 id="comeToHS">Venir au hackerspace</h2>
         <p class="ml-5">
-            Le hackerspace est ouvert du lundi au vendredi. </br>
+            Le hackerspace est ouvert du lundi au vendredi. <br/>
             On essaie d'être ouvert le plus longtemps possible(de 8h30 à 23h00) mais ce n'est pas sûr!
             Pour voir si on est ouvert, rends toi sur <a href="https://urlab.be/space/pamela">pamela</a>.
         </p>
@@ -77,7 +77,7 @@
 
         <h3 class="ml-3" id="sinvestir_events">Les évènements</h3>
         <p class="ml-5">Nous organisons des évènements tout au long de l'année. La grande majorité sont gratuits
-            et pour tous! (Il y a que pour les barbecues qu'on demande une P.A.F)</br>
+            et pour tous! (Il y a que pour les barbecues qu'on demande une P.A.F)<br />
             Le but des ces évènements:
             <ul class="ml-5">
                 <li>Aider les BA1 en informatique (mais pas qu'eux!),</li>
@@ -153,9 +153,9 @@
             page, il y a un bouton "proposer". Clique dessus et remplis le formulaire qui te sera proposer.
             Lorsque tu arrives dans l'espace description, pour rendre celle-ci plus lisible, tu dois utiliser
             <strong>markdown</strong>. C'est langage de formatage de texte. Voici deux liens pour apprendre
-            (comprend copier/coller) rapidement comment mettre ta description en page.</br>
-            <a href="https://en.support.wordpress.com/markdown-quick-reference/">markdown quick reference</a></br>
-            <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown cheat sheet</a></br>
+            (comprend copier/coller) rapidement comment mettre ta description en page.<br />
+            <a href="https://en.support.wordpress.com/markdown-quick-reference/">markdown quick reference</a><br />
+            <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">markdown cheat sheet</a><br />
         </p>
 
         <h3 class="ml-3" id="projets_money">Demander un budget</h3>
