--- a/wiki/templates/article_detail.html
+++ b/wiki/templates/article_detail.html
@@ -6,6 +6,14 @@
 {{article.title}}
 {% endblock %}
 
+{% block opengraph %}
+    <meta property="og:title" content="{{ article.title }}" />
+    <meta property="og:url" content="https://urlab.be{% url "view_article" article.pk %}" />
+    <meta property="og:description" content="{{ article.content }}" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+    <meta property="article:section" content="Badge" />
+{% endblock %}
+
 {% block content %}
     <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
