--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -4,8 +4,15 @@
 Projets à UrLab
 {% endblock %}
 
-{% block content %}
+{% block opengraph %}
+    <meta property="og:title" content="Projets du hackerspace" />
+    <meta property="og:description" content="La liste des projets du hackerspace" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://urlab.be{% url "projects_home" %}" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+{% endblock %}
 
+{% block content %}
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">UrLab</a></li>
