[Add] motd/wiki og

--- a/space/templates/motd.html
+++ b/space/templates/motd.html
@@ -3,6 +3,14 @@
 {% load formatting %}
 {% load humanize %}
 
+{% block opengraph %}
+    <meta property="og:title" content="Music of the Day" />
+    <meta property="og:description" content="En direct de notre channel IRC !" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://urlab.be{% url "motd" 1 %}" />
+    <meta property="og:image" content="https://urlab.be/static/img/space-invaders.png" />
+{% endblock %}
+
 {% block content %}
 <nav aria-label="breadcrumb">
 <ol class="breadcrumb">
