[FIX] Cannot see edit button anymore if you don't own a project

--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -28,6 +28,9 @@
         max-width: 750px;
         max-height: 750px;
     }
+    .alert {
+        display:inline-block;
+    }
 </style>
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
@@ -39,15 +42,20 @@
 
 <div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>
-        {{project.title}} <small>{{project.short_description}}</small>
-        <a class="btn btn-primary" href="{% url "edit_project" project.id %}">
+        {{project.title}}
+        {% if project.maintainer.username == user.username %}
+        <a class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="tu n'as pas les droits pour faire ça"  href="{% url "edit_project" project.id %}">
             <span class="fa fa-edit" aria-hidden="true"></span>
             Editer
         </a>
-
+        {% endif %}
     </h1>
-
+    <h1>
+        <small>{{project.short_description}}</small>
+    </h1>
 </div>
+
+
 
 <div class="row">
     <div class="col-md-8 col-md-pull-4 project-detail-content">
@@ -135,5 +143,5 @@
     <div class="col mt-4">
         {% include "project_comments_list.html" %}
     </div>
-</div> 
+</div>
 {% endblock %}
