--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -55,7 +55,11 @@
     </h1>
 </div>
 
-
+{% if project.maintainer.username != user.username %}
+<div class="alert alert-info" role="alert">
+  Tu n'as pas les droits pour éditer ce projet.
+</div>
+{% endif %}
 
 <div class="row">
     <div class="col-md-8 col-md-pull-4 project-detail-content">
