--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -40,11 +40,12 @@
     </ol>
 </nav>
 
+
 <div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>
         {{project.title}}
-        {% if project.maintainer.username == user.username %}
-        <a class="btn btn-primary" data-toggle="tooltip" data-placement="bottom" title="tu n'as pas les droits pour faire ça"  href="{% url "edit_project" project.id %}">
+        {% if perms.projects.change_project %}
+        <a class="btn btn-primary"  href="{% url "edit_project" project.id %}">
             <span class="fa fa-edit" aria-hidden="true"></span>
             Editer
         </a>
@@ -55,7 +56,7 @@
     </h1>
 </div>
 
-{% if project.maintainer.username != user.username %}
+{% if not perms.projects.change_project %}
 <div class="alert alert-info" role="alert">
   Tu n'as pas les droits pour éditer ce projet.
 </div>
