--- a/wiki/templates/article_detail.html
+++ b/wiki/templates/article_detail.html
@@ -78,7 +78,13 @@
                         </div>
                     </div>
                 {% endfor %}
-            {% endif %}
+                <form action="{% url "diff_article" %}">
+                    <div class="form-group">
+                        {{ diff_form.as_p }}
+                    </div>
+                    <input class="btn btn-success" type="submit" value="Montrer la différence">
+                </form>
+                {% endif %}
         </div>
     </div>
 
