--- a/wiki/templates/diff_article.html
+++ b/wiki/templates/diff_article.html
@@ -10,6 +10,20 @@ Formulaire article
     {{ form.media  }}
     <!-- <link href="{% static "css/bootstrap-multiselect.css" %}" rel="stylesheet"> -->
     <!-- <script type="text/javascript" src="{% static "js/bootstrap-multiselect.js" %}"></script> -->
+    <style>
+        .diff_add {
+            background-color: #aaffaa;
+        }
+
+        .diff_sub {
+            background-color: #ffaaaa;
+        }
+
+        .diff_chg {
+            background-color: #ffffaa;
+        }
+    </style>
+
 {% endblock %}
 
 {% block content %}
@@ -18,6 +32,30 @@ Formulaire article
     <div class="container">
         {{ delta | safe }}
     </div>
+
+    Légende:
+    <table class="table table-sm">
+        <thead>
+            <tr>
+                <th scope="col" class="col-2">Couleur</th>
+                <th scope="col">Signification</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="background-color: #FFAAAA">(t)op</td>
+                <td>Supprimé</td>
+            </tr>
+            <tr>
+                <td style="background-color: #AAFFAA">(f)irst change</td>
+                <td>Ajouté</td>
+            </tr>
+            <tr>
+                <td style="background-color: #FFFF77">(n)ext change</td>
+                <td>Modifié</td>
+            </tr>
+        </tbody>
+    </table>
 
     <div class="row">
         <div class="col-2 row-elem"></div>
