--- a/wiki/templates/diff_article.html
+++ b/wiki/templates/diff_article.html
@@ -29,11 +29,37 @@ Formulaire article
 {% block content %}
     <h2>Différences:</h2>
 
+    <div class="row">
+        <div class="col-2 row-elem"></div>
+        <div class="col-2 row-elem">
+            <p>{{ old_article.commit }}</p>
+        </div>
+        <div class="col-4 row-elem"></div>
+        <div class="col-2 row-elem">
+            <p>{{ article.commit }}</p>
+        </div>
+    </div>
+
     <div class="container">
         {{ delta | safe }}
     </div>
 
-    Légende:
+    <div class="row">
+        <div class="col-2 row-elem"></div>
+        <div class="col-2 row-elem">
+            <a class="btn btn-primary" href="{% url "view_old_version" initial_article.pk article.pk %}">
+                Voir cette version
+            </a>
+        </div>
+        <div class="col-4 row-elem"></div>
+        <div class="col-2 row-elem">
+            <a class="btn btn-primary" href="{% url "view_old_version" initial_article.pk old_article.pk %}">
+                Voir cette version
+            </a>
+        </div>
+    </div>
+
+    <h4 class="mt-5">Légende:</h4>
     <table class="table table-sm">
         <thead>
             <tr>
@@ -56,19 +82,4 @@ Formulaire article
             </tr>
         </tbody>
     </table>
-
-    <div class="row">
-        <div class="col-2 row-elem"></div>
-        <div class="col-2 row-elem">
-            <a class="btn btn-success" href="{% url "view_article" old_article.pk %}">
-                Voir cette version
-            </a>
-        </div>
-        <div class="col-4 row-elem"></div>
-        <div class="col-2 row-elem">
-            <a class="btn btn-success" href="{% url "view_article" article.pk %}">
-                Voir cette version
-            </a>
-        </div>
-    </div>
 {% endblock %}
