--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -4,9 +4,9 @@
 <div class="well">
         <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
         <iframe width="350" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                src="https://www.openstreetmap.org/export/embed.html?bbox=4.381763935089112%2C50.811717774952974%2C4.387128353118897%2C50.814127731978864&amp;layer=mapnik&amp;marker=50.812922769009084%2C4.384446144104004">
+                src="https://www.openstreetmap.org/export/embed.html?bbox=4.3815574049949655%2C50.811014423688874%2C4.3844541907310495%2C50.812375356434686&amp;layer=mapnik&amp;marker=50.81169489501826%2C4.383005797863007">
         </iframe><br/>
-        <p>
+        </p>
     <hr/>
 
     <div class="text-right">
@@ -61,7 +61,7 @@
             </small>
         </h4>
         <h4>Adresse
-            <small>131 av. Buyl, 1050 Bruxelles</small>
+            <small>UB2.126 A, 50 Avenue Franklin Roosevelt, 1050 Ixelles</small>
         </h4>
         <h4>Téléphone
             <small>02/650.49.67</small>
